--- a/package.json
+++ b/package.json
@@ -4,16 +4,37 @@
   "description": "An Ionic project",
   "devDependencies": {
     "@ionic/v1-toolkit": "^1.0.0",
+    "cordova-android": "^9.0.0",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.2.0",
+    "cordova-plugin-ionic-webview": "^4.2.1",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "git+https://github.com/brodysoft/Cordova-SQLitePlugin.git",
     "gulp": "^3.5.6",
     "gulp-clean-css": "^3.7.0",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^3.1.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@ionic-native/sqlite": "^5.30.0",
+    "ionic-native": "^2.9.0"
+  },
   "cordova": {
     "plugins": {
-      "cordova-sqlite-storage": {}
-    }
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
