--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@ionic-native/sqlite": "^5.30.0",
+    "cordova-ios": "6.1.1",
     "ionic-native": "^2.9.0",
     "moment": "^2.29.1"
   },
@@ -35,7 +36,8 @@
       "cordova-plugin-ionic-keyboard": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
