--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "@ionic/v1-toolkit": "^1.0.0",
     "cordova-android": "^9.0.0",
+    "cordova-ios": "^6.1.1",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.2.1",
@@ -19,7 +20,6 @@
   },
   "dependencies": {
     "@ionic-native/sqlite": "^5.30.0",
-    "cordova-ios": "6.1.1",
     "ionic-native": "^2.9.0",
     "moment": "^2.29.1"
   },
